...
            "state": "translated",
            "value": "データ利用"
          }
        }
      }
    },
    "Consent Status" : {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Consent Status"
          }
...
            "state": "translated",
            "value": "再同意が必要"
          }
        }
      }
    },
    "Read Details" : {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Read Details"
          }
...
            "state": "translated",
            "value": "説明を読む"
          }
        }
      }
    },
    "Review and Agree" : {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Review and Agree"
          }
...
            "state": "translated",
            "value": "確認して同意"
          }
        }
      }
    },
    "Close" : {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Close"
          }
...
            "state": "translated",
            "value": "同意を撤回しますか？"
          }
        }
      }
    },
    "Cancel" : {
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Cancel"
          }
...
    },
    "HEADER_SERVICE_TOKENS" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Token List"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "トークン一覧"
...
    },
    "LABEL_ACTIVATE_ON_FOREGROUND" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Auto Connect"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "自動接続"
...
    },
    "LABEL_SETTINGS" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Settings"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "設定"
...
    },
    "LABEL_VPN_IS_CONNECTED" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Connection Status"
          }
        },
        "ja" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "接続状態"
...
            "state" : "translated",
            "value" : "データの利用と同意"
          }
        }
      }
    },
    "Agree" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Agree"
          }
...
            "state" : "translated",
            "value" : "同意する"
          }
        }
      }
    },
    "Not Now" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Not Now"
          }
...
            "state" : "translated",
            "value" : "今は同意しない"
          }
        }
      }
    },
    "Withdraw Consent" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Withdraw Consent"
          }
...
            "state" : "translated",
            "value" : "通知を許可"
          }
        }
      }
    },
    "Purpose" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
            "state" : "translated",
            "value" : "Purpose"
          }
...
            "state" : "translated",
            "value" : "利用規約"
          }
        }
      }
    },
    "Privacy" : {
      "localizations" : {
        "en" : { "stringUnit" : { "state" : "translated", "value" : "Privacy" } },
        "ja" : { "stringUnit" : { "state" : "translated", "value" : "プライバシー" } }
      }
    },
    "Privacy Policy" : {
      "localizations" : {
        "en" : {
          "stringUnit" : {
...
