...
final class WebTokenStore {
    // iCloud Keychainを利用する
    // ライブラリ側と共通なので見ようと思ったらプライベートキーも参照できる？
    private let keychain: Keychain = .init(service: Bundle.main.bundleIdentifier!).synchronizable(true)

    var options: [ProxyOption] = [
        .init(host: "api.lp1.av5ja.srv.nintendo.net", paths: [
            .init(path: "/api/bullet_tokens"),
        ]),
        .init(host: "app.splatoon2.nintendo.net", paths: [
            .init(path: "/"),
        ]),
    ].sorted(by: { $0.host < $1.host })

...
